FIX: adder's after overflowed its container

--- a/src/styles/todo.css
+++ b/src/styles/todo.css
@@ -84,6 +84,7 @@
   /* posicion */
   position: absolute;
   bottom: 0;
+  left: 0;
   border-bottom: 1px solid lightgrey;
 }
 
